--- a/app/src/main/res/raw/licenses.html
+++ b/app/src/main/res/raw/licenses.html
@@ -38,25 +38,6 @@ See the License for the specific language governing permissions and
 limitations under the License.
 </pre>
 <ul>
-    <li>Retrolambda</li>
-</ul>
-
-<pre>
-Copyright (c) 2014 Evan Tatarka
-
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-   http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
-</pre>
-<ul>
     <li>LoganSquare</li>
 </ul>
 
@@ -122,25 +103,6 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE..
 </pre>
 <ul>
-    <li>PreLollipop Transition</li>
-</ul>
-
-<pre>
-Copyright (c) 2015 takahirom
-
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-   http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
-</pre>
-<ul>
     <li>PhotoView</li>
 </ul>
 
@@ -152,25 +114,6 @@ you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
 
    http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
-</pre>
-<ul>
-    <li>Calligraphy</li>
-</ul>
-
-<pre>
-Copyright (c) 2013 Christopher Jenkins
-
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
 
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
@@ -198,11 +141,11 @@ See the License for the specific language governing permissions and
 limitations under the License.
 </pre>
 <ul>
-    <li>Circular ImageView</li>
+    <li>DrawMe</li>
 </ul>
 
 <pre>
-Copyright (c) 2016 Lopez Mikhael
+Copyright (c) 2016 Rafał Kobyłko
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -216,12 +159,33 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 </pre>
+
 <ul>
-    <li>DrawMe</li>
+    <li>recyclerview-animators</li>
 </ul>
 
 <pre>
-Copyright (c) 2016 Rafał Kobyłko
+    Copyright 2017 Wasabeef
+
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+
+   http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
+</pre>
+
+<ul>
+    <li>recycler-fast-scroll</li>
+</ul>
+
+<pre>
+    Copyright 2015 Future Mind
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
